# teensy3_keyboard_controller

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  project_description.md  read_serial
.cargo/: config
documentation/: project_description.md
src/: custom_key_codes.rs  key_codes.rs  main.rs  process_keys.rs  record_keyboard_matrix.rs
