[package]
name = "teensy3-rs-demo"
version = "0.1.0"
authors = ["Alpi Tolvanen <alpi.tolvanen@tutanota.com>", "Simon Sapin <simon.sapin@exyr.org>", "James Munns <james.munns@gmail.com>"]

[dependencies]
teensy3 = { path = "teensy3-rs/teensy3"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"

[features]
# Choose one. This feature will passed with environmental variable from Makefile
TEENSY30 = ["teensy3/teensy_3_0"]
TEENSY31 = ["teensy3/teensy_3_1"]
TEENSY32 = ["teensy3/teensy_3_2"]
TEENSY35 = ["teensy3/teensy_3_5"]
TEENSY36 = ["teensy3/teensy_3_6"]
